--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <!-- Required meta tags -->
+    <link rel="icon" href="monicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Portfolio d'Amélia Pilou - BTS SIO SLAM">
