--- a/index.html
+++ b/index.html
@@ -1,24 +1,119 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <!-- Required meta tags -->
-    <link rel="icon" href="monicon.ico">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Portfolio d'Amélia Pilou - BTS SIO SLAM">
-    <meta name="author" content="Amélia Pilou">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <head>
+        <!-- Required meta tags -->
+        <link rel="icon" href="monicon.ico">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Portfolio d'Amélia Pilou - BTS SIO SLAM">
+        <meta name="author" content="Amélia Pilou">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <title>Portfolio d'Amélia Pilou (BTS SIO 2020)</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+            <div class="container">
+                <button type="button" class="navbar-toggler" data-toggle="collapse"
+                        data-target="#navbar" aria-controls="navbar">
+                    <span class="sr-only">Navigation raccourcie</span>☰
+                </button>
+                <a class="navbar-brand" href="#">Mon porfolio</a>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active nav-item">
+                            <a href="index.html" class="nav-link">
+                                <span class="fa fa-home"></span>Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="cv.html" class="nav-link">
+                                <span class="fa fa-id-badge"></span>CV
+                            </a>
+                        </li>
+                        <li class="dropdown nav-item">
+                            <a href="#" class="dropdown-toggle nav-link"
+                               data-toggle="dropdown" role="button">
+                                <span class="fa fa-list-alt"></span> Réalisations <span class="caret"></span>
+                            </a>                       
+                            <ul class="dropdown-menu" role="menu">
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    En autonomie</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Application Android</a>
+                                </li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Site web</a>
+                                </li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Études et analyses</a>
+                                </li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    En entreprise</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Projet de 1ère année</a>
+                                </li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Projet de 2ème année</a>
+                                </li>
+                            </ul>
+                        <li class="dropdown nav-item">
+                            <a href="#" class="dropdown-toggle nav-link"
+                               data-toggle="dropdown" role="button">
+                                <span class="fa fa-graduation-cap"></span>
+                                Jury E4 BTS SIO
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li class="dropdown-header dropdown-item" role="presentation">
+                                    Documentations contexte</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Présentation</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Application</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Missions à réaliser</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Annexes</a></li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    Fiches d'examen</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Situation professionnelle n°1</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Situation professionnelle n°2</a></li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    Démonstrations</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Démo SP n°1</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Démo SP n°2</a></li>
+                                <li role="presentation" class="dropdown-divider"></li>
+                                <li role="presentation" class="dropdown-header dropdown-item">
+                                    Codes sources</li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Sources SP n°1</a></li>
+                                <li role="presentation" class="dropdown-item">
+                                    <a role="menuitem" href="#">Sources SP n°2</a></li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link"><span class="fa fa-envelope"></span>
+                                        Me contacter 
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                </div>
+            </div>
+        </nav>
+        <h1>Bonjour et bienvenue sur mon portfolio !</h1>
 
-    <title>Portfolio d'Amélia Pilou (BTS SIO 2020)</title>
-  </head>
-  <body>
-    <h1>Bonjour et bienvenue sur mon portfolio !</h1>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </body>
 </html>
