Création d'une page CV

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -10,6 +10,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="../css/cv.css" rel="stylesheet">
         <title>Portfolio d'Amélia Pilou (BTS SIO 2020)</title>
     </head>
     <body>
@@ -109,16 +110,19 @@
             </div>
         </nav>        
         <div class="jumbotron">            
-            <div class="container">
-                <h1>Bonjour et bienvenu sur mon portfolio !</h1>
-                <p>
-                    <img id="maPhoto" class="float-left rounded" src="images/AmeliaPilou.jpg"
-                         alt="Ma photo d'identité">Je m'appelle Amélia Pilou, j'ai 21 ans et ce site a pour
-                    vocation de me présenter en tant que personne, en tant qu'étudiante
-                    et candidate à l'obtention du BTS SIO (Services Informatiques
-                    aux Organisations) et en tant que future professionnelle de l'informatique.
-                </p>
-                <p><a class="btn btn-primary btn-lg" href="pages/cv.html" role="button">En savoir plus »</a></p>
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row cadreCV">
+                        <div id="cv-entete" class="text-center">
+                            <div id="cv-photo">
+                                <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
+                            </div>
+                            <div id="cv-intro">
+                                <h1>Bonjour, je m'appelle <span>Amélia</span> et voici mon CV</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div> <!-- Emplacement pour le contenu principal de la page -->
         <footer>
