Fin de séance de travail à page 63 du TP2 SLAM5

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -112,7 +112,10 @@
         <div class="jumbotron">            
             <div class="jumbotron">
                 <div class="container">
-                    <div class="row cadreCV">
+                    <div class="row cadreCV">                        
+                        <div class="col-xs-12 col-sm-7">
+
+                        </div>
                         <div id="cv-entete" class="text-center">
                             <div id="cv-photo">
                                 <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
@@ -120,6 +123,18 @@
                             <div id="cv-intro">
                                 <h1>Bonjour, je m'appelle <span>Amélia</span> et voici mon CV</h1>
                             </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-7">
+                            <div class="rubrique clearfix">
+                                <h2><span class="fa fa-comment"></span> En quelques mots...</h2>
+                                <p>J'ai 21 ans, j'habite Toulon et je suis passionnée d'informatique et
+                                    de nouvelles technologies depuis mon plus jeune âge. Je suis
+                                    actuellement un BTS Services Informatiques aux Organisations ce qui m'a 
+                                    décidé à aller au delà de la passion, afin de faire de l'informatique
+                                    et plus particulièrement du développement d'applications mon métier !
+                                </p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
